fix: parallax view on tablet

--- a/src/app/mars/main-page/main-page.component.scss
+++ b/src/app/mars/main-page/main-page.component.scss
@@ -19,6 +19,8 @@
     background-repeat: no-repeat;
     @include media-laptop {
       height: 29vw;
+    }
+    @include media-mobile {
       background-size: contain;
     }
   }
